--- a/index.html
+++ b/index.html
@@ -3,11 +3,147 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>First version</title>
+    <link rel="stylesheet" href="css/general.css" />
+    <link rel="stylesheet" href="css/background.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="icon" type="image/png" href="/favicon/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/favicon/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="Aydin Abbasi" />
+    <link rel="manifest" href="/favicon/site.webmanifest" />
+    <title>Aydin Abbasi</title>
   </head>
 
   <body>
-    <h1>Hello from Aydin</h1>
-    <p>Test paragraph</p>
+    <div class="background">
+      <div class="glow"></div>
+      <div class="grid-overlay"></div>
+      <div class="noise-overlay"></div>
+      <div class="particles-container" id="particles-container"></div>
+    </div>
+
+    <main>
+      <header>
+        <a href="/" class="profile-link">
+          <img
+            src="images/avatar.png"
+            class="profile-avatar"
+            alt="Aydin Abbasi"
+          />
+        </a>
+        <h1 class="intro-title">
+          A Full-Stack Developer<span class="intro-punctuation">.</span>
+          <span class="intro-accent">✨</span>
+        </h1>
+        <p class="intro-text">
+          Hey! 👋<br />
+          I’m Aydin (Some people call me Milad) Abbasi, a full-stack developer from Ardabil, Iran. I love
+          turning creative ideas into real, working stuff. I’m not just here to
+          make money — reating value and building things that actually matter
+          is what drives me.<br />
+          I work with HTML, CSS, JavaScript, TypeScript, and PHP. Right now, I’m
+          diving deeper into networking, computer engineering, and databases,
+          while also improving my English and Turkish along the way!<br />
+          Thanks for stopping by and joining me on this journey. Let’s build
+          something awesome together!
+        </p>
+        <div class="social-links">
+          <a
+            class="social-link"
+            aria-label="Follow on X"
+            href="https://twitter.com/aydincore"
+            target="_blank"
+          >
+            <svg viewBox="0 0 24 24" aria-hidden="true" class="social-icon">
+              <path
+                d="M13.3174 10.7749L19.1457 4H17.7646L12.7039 9.88256L8.66193 4H4L10.1122 12.8955L4 20H5.38119L10.7254 13.7878L14.994 20H19.656L13.3171 10.7749H13.3174ZM11.4257 12.9738L10.8064 12.0881L5.87886 5.03974H8.00029L11.9769 10.728L12.5962 11.6137L17.7652 19.0075H15.6438L11.4257 12.9742V12.9738Z"
+              ></path>
+            </svg>
+          </a>
+          <a
+            class="social-link"
+            aria-label="Follow on Instagram"
+            href="https://www.instagram.com/abbasi.xyz"
+            target="_blank"
+          >
+            <svg viewBox="0 0 24 24" aria-hidden="true" class="social-icon">
+              <path
+                d="M12 3c-2.444 0-2.75.01-3.71.054-.959.044-1.613.196-2.185.418A4.412 4.412 0 0 0 4.51 4.511c-.5.5-.809 1.002-1.039 1.594-.222.572-.374 1.226-.418 2.184C3.01 9.25 3 9.556 3 12s.01 2.75.054 3.71c.044.959.196 1.613.418 2.185.23.592.538 1.094 1.039 1.595.5.5 1.002.808 1.594 1.038.572.222 1.226.374 2.184.418C9.25 20.99 9.556 21 12 21s2.75-.01 3.71-.054c.959-.044 1.613-.196 2.185-.419a4.412 4.412 0 0 0 1.595-1.038c.5-.5.808-1.002 1.038-1.594.222-.572.374-1.226.418-2.184.044-.96.054-1.267.054-3.711s-.01-2.75-.054-3.71c-.044-.959-.196-1.613-.419-2.185A4.412 4.412 0 0 0 19.49 4.51c-.5-.5-1.002-.809-1.594-1.039-.572-.222-1.226-.374-2.184-.418C14.75 3.01 14.444 3 12 3Zm0 1.622c2.403 0 2.688.009 3.637.052.877.04 1.354.187 1.67.31.421.163.72.358 1.036.673.315.315.51.615.673 1.035.123.317.27.794.31 1.671.043.95.052 1.234.052 3.637s-.009 2.688-.052 3.637c-.04.877-.187 1.354-.31 1.67-.163.421-.358.72-.673 1.036a2.79 2.79 0 0 1-1.035.673c-.317.123-.794.27-1.671.31-.95.043-1.234.052-3.637.052s-2.688-.009-3.637-.052c-.877-.04-1.354-.187-1.67-.31a2.789 2.789 0 0 1-1.036-.673 2.79 2.79 0 0 1-.673-1.035c-.123-.317-.27-.794-.31-1.671-.043-.95-.052-1.234-.052-3.637s.009-2.688.052-3.637c.04-.877.187-1.354.31-1.67.163-.421.358-.72.673-1.036.315-.315.615-.51 1.035-.673.317-.123.794-.27 1.671-.31.95-.043 1.234-.052 3.637-.052Z"
+              ></path>
+              <path
+                d="M12 15a3 3 0 1 1 0-6 3 3 0 0 1 0 6Zm0-7.622a4.622 4.622 0 1 0 0 9.244 4.622 4.622 0 0 0 0-9.244Zm5.884-.182a1.08 1.08 0 1 1-2.16 0 1.08 1.08 0 0 1 2.16 0Z"
+              ></path>
+            </svg>
+          </a>
+          <a
+            class="social-link"
+            aria-label="Follow on GitHub"
+            href="https://github.com/aydinverse"
+            target="_blank"
+          >
+            <svg viewBox="0 0 24 24" aria-hidden="true" class="social-icon">
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M12 2C6.475 2 2 6.588 2 12.253c0 4.537 2.862 8.369 6.838 9.727.5.09.687-.218.687-.487 0-.243-.013-1.05-.013-1.91C7 20.059 6.35 18.957 6.15 18.38c-.113-.295-.6-1.205-1.025-1.448-.35-.192-.85-.667-.013-.68.788-.012 1.35.744 1.538 1.051.9 1.551 2.338 1.116 2.912.846.088-.666.35-1.115.638-1.371-2.225-.256-4.55-1.14-4.55-5.062 0-1.115.387-2.038 1.025-2.756-.1-.256-.45-1.307.1-2.717 0 0 .837-.269 2.75 1.051.8-.23 1.65-.346 2.5-.346.85 0 1.7.115 2.5.346 1.912-1.333 2.75-1.05 2.75-1.05.55 1.409.2 2.46.1 2.716.637.718 1.025 1.628 1.025 2.756 0 3.934-2.337 4.806-4.562 5.062.362.32.675.936.675 1.897 0 1.371-.013 2.473-.013 2.82 0 .268.188.589.688.486a10.039 10.039 0 0 0 4.932-3.74A10.447 10.447 0 0 0 22 12.253C22 6.588 17.525 2 12 2Z"
+              ></path>
+            </svg>
+          </a>
+          <a
+            class="social-link"
+            aria-label="Follow on LinkedIn"
+            href="#"
+          >
+            <svg viewBox="0 0 24 24" aria-hidden="true" class="social-icon">
+              <path
+                d="M18.335 18.339H15.67v-4.177c0-.996-.02-2.278-1.39-2.278-1.389 0-1.601 1.084-1.601 2.205v4.25h-2.666V9.75h2.56v1.17h.035c.358-.674 1.228-1.387 2.528-1.387 2.7 0 3.2 1.778 3.2 4.091v4.715zM7.003 8.575a1.546 1.546 0 01-1.548-1.549 1.548 1.548 0 111.547 1.549zm1.336 9.764H5.666V9.75H8.34v8.589zM19.67 3H4.329C3.593 3 3 3.58 3 4.297v15.406C3 20.42 3.594 21 4.328 21h15.338C20.4 21 21 20.42 21 19.703V4.297C21 3.58 20.4 3 19.666 3h.003z"
+              ></path>
+            </svg>
+          </a>
+
+        </div>
+        <div class="cta-actions">
+          <a class="cta-button" href="mailto:hello@aydinabbasi.com">
+            <span>Send email</span>
+            <svg
+              fill="currentColor"
+              class="cta-icon--arrow"
+              xmlns="http://www.w3.org/2000/svg"
+              width="11"
+              height="11"
+            >
+              <path
+                d="M5.977 10.368 4.953 9.354 8.02 6.286H.568V4.805H8.02L4.953 1.742 5.977.723 10.8 5.546z"
+              ></path>
+            </svg>
+          </a>
+
+          <a
+            class="cta-button"
+            href="https://t.me/aydinverse"
+            target="_blank"
+          >
+            <svg viewBox="0 0 70 59" class="cta-icon--telegram" fill="none">
+              <path
+                d="M4.97 25.324c18.66-8.128 31.1-13.487 37.32-16.076C60.07 1.855 63.76.57 66.17.528c.53-.01 1.71.122 2.48.745.64.525.82 1.235.91 1.733.08.498.19 1.633.1 2.519-.96 10.12-5.13 34.678-7.25 46.013-.89 4.796-2.66 6.404-4.37 6.561-3.72.342-6.54-2.456-10.14-4.815-5.63-3.693-8.81-5.991-14.28-9.594-6.32-4.164-2.22-6.453 1.38-10.193.94-.98 17.32-15.874 17.63-17.225.04-.17.08-.8-.3-1.131-.37-.333-.92-.22-1.32-.13-.57.129-9.56 6.077-27 17.844-2.55 1.754-4.86 2.609-6.94 2.564-2.28-.05-6.68-1.292-9.95-2.354-4-1.303-7.19-1.992-6.91-4.205.14-1.152 1.73-2.331 4.76-3.536Z"
+                fill="currentColor"
+              ></path>
+            </svg>
+            <span>Quick chat</span>
+          </a>
+        </div>
+      </header>
+    </main>
+
+    <footer>
+      <p>All content on this website is free to use.</p>
+      <p>© 2026 - <span id="current-year"></span>. Creative Wolf.</p>
+    </footer>
+
+    <script src="script/background.js"></script>
+    <script>
+      document.getElementById("current-year").textContent = new Date().getFullYear();
+    </script>
   </body>
 </html>
